Update architecture adoc so that its batch-asciidoc variable is set
* Updated all docs that had `batch-asciidoc` declared to use attributes.adoc instead.
This way we can set the variable in one location and all adocs can take advantage of it.
* Also made sure that `batch-asciidoc` was set to use a relative path vs. the link in the UI.
This is because the PDF can't use a URL that contains the `-` character.

Resolves #4268

--- a/spring-batch-docs/src/main/asciidoc/appendix.adoc
+++ b/spring-batch-docs/src/main/asciidoc/appendix.adoc
@@ -1,8 +1,9 @@
-:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
 [[listOfReadersAndWriters]]
+include::attributes.adoc[]
+
 [appendix]
 == List of ItemReaders and ItemWriters
 
