--- a/spring-batch-docs/src/main/asciidoc/testing.adoc
+++ b/spring-batch-docs/src/main/asciidoc/testing.adoc
@@ -1,10 +1,10 @@
-:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
 [[testing]]
 == Unit Testing
 
+include::attributes.adoc[]
 ifndef::onlyonetoggle[]
 include::toggle.adoc[]
 endif::onlyonetoggle[]
