--- a/spring-batch-docs/src/main/asciidoc/domain.adoc
+++ b/spring-batch-docs/src/main/asciidoc/domain.adoc
@@ -1,10 +1,10 @@
-:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
 [[domainLanguageOfBatch]]
 == The Domain Language of Batch
 
+include::attributes.adoc[]
 ifndef::onlyonetoggle[]
 include::toggle.adoc[]
 endif::onlyonetoggle[]
