--- a/spring-batch-docs/src/main/asciidoc/repeat.adoc
+++ b/spring-batch-docs/src/main/asciidoc/repeat.adoc
@@ -1,4 +1,3 @@
-:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
@@ -6,6 +5,7 @@
 
 == Repeat
 
+include::attributes.adoc[]
 ifndef::onlyonetoggle[]
 include::toggle.adoc[]
 endif::onlyonetoggle[]
