--- a/spring-batch-docs/src/main/asciidoc/retry.adoc
+++ b/spring-batch-docs/src/main/asciidoc/retry.adoc
@@ -1,10 +1,10 @@
-:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
 [[retry]]
 
 == Retry
+include::attributes.adoc[]
 
 To make processing more robust and less prone to failure, it sometimes helps to
 automatically retry a failed operation in case it might succeed on a subsequent attempt.
