Fix typo tnew to new in adoc files

--- a/spring-batch-docs/src/main/asciidoc/common-patterns.adoc
+++ b/spring-batch-docs/src/main/asciidoc/common-patterns.adoc
@@ -733,7 +733,7 @@ public Job job1(JobRepository jobRepository) {
 
 @Bean
 public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
-	return tnew StepBuilder("step1", jobRepository)
+	return new StepBuilder("step1", jobRepository)
 				.<String, String>chunk(10, transactionManager)
 				.reader(reader())
 				.writer(savingWriter())
